# wellbelog

./: .gitignore  Readme.md  makefile  pyproject.toml  requirements.txt  setup.py  test.csv
.github/: pull_request_template.md
.github/workflows/: codecov.yaml  push.yml
examples/: dlis_reading.py  example.py  example_dlis.py  example_las.py  las_management.py  lis_management.py  main_reader.py
examples/test_files/: 1PIR1AL_conv_ccl_canhoneio.dlis  7CS__0012__AL_7CS__0012__AL.tif  7PIR_0074__AL_7PIR_0074__AL.dlis
test/: test_dlis_reading.py  test_las_reading.py  test_lis_reading.py
test/dlis/: test_dlis_export.py  test_dlis_functions.py  test_dlis_models.py  test_dlis_reading.py
test/las/: test_las__functions.py  test_las_export.py  test_las_models.py  test_las_reading.py
test/lis/: test_lis_export.py  test_lis_functions.py  test_lis_models.py  test_lis_reading.py
test/test_files/: 1-MPE-3-AL.lis  1-MPE-3-AL_hals-dslt-tdd-hgns-gr_resistividade_repetida.las  1PIR1AL_conv_ccl_canhoneio-error.dlis
test/utils/: test_json_io.py  test_main_reader.py  test_mnemonics_utils.py  test_units.py
webelog/: __init__.py  _version.py  lis.ipynb  rediscovery.py
webelog/belodlis/: __init__.py  dlis.py  types.py
webelog/belolas/: functions.py  manager.py
webelog/belolis/: base.py  manager.py
webelog/db/: base.py
webelog/plotters/: __init__.py  trackplotter.py
webelog/utils/: __init__.py
wellbelog/: main_reader.py
wellbelog/belodlis/: __init__.py  functions.py  reader.py  readme.md  schemas.py
wellbelog/belolas/: __init__.py  functions.py  reader.py  (+2 more)
(+32 files in other folders)
