[tool.poetry]
name = "wellbelog"
version = "0.0.1"
description = "A python package to work with digital well logs formats, like .las, .lis and .dlis"
authors = ["pedrokpaxo <pedro@monumentosoftware.com.br>"]
license = "MIT"
readme = "Readme.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
dlisio = "^1.0.2"
lasio = "^0.31"
pydantic = "^2.9.1"
rich = "^13.8.1"
pymongo = "^4.8.0"
shapely = "^2.0.6"
sqlalchemy = "^2.0.34"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
